# src/main/java/org/unamur/exception/ErrorResponse.java
@@ -1,0 +1,20 @@
+package org.unamur.exception;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.OffsetDateTime;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class ErrorResponse {
+    private OffsetDateTime timestamp;
+    private int status;
+    private String error;
+    private String message;
+    private String path;
+}
